tests/agl/rejections/type/duplicate_dict_key.agl
let m = {a: 1, a: 2}
m
